refactor: rename project to pulsemesh-api and update package.json
chore: remove unused favicon.ico and add new favicon.svg

feat: update apiResilienceManager to remove deprecated providers and add Clerk as an auth provider

fix: update footer text in Index.tsx for clarity on enterprise focus

build: simplify vite.config.ts by removing development mode specific plugin

feat: add new logo.svg with updated design for branding

--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API Resilience Hub - Intelligent Middleware Platform</title>
+    <title>PulseMesh API - Resilience Management Platform</title>
     <meta name="description" content="Monitor, manage, and optimize API reliability with intelligent failover, real-time monitoring, and AI-powered resilience for your critical business services." />
-    <meta name="author" content="API Resilience Hub" />
+    <meta name="author" content="PulseMesh API" />
     <meta name="keywords" content="API monitoring, failover, resilience, middleware, uptime, SaaS" />
 
-    <meta property="og:title" content="API Resilience Hub - Intelligent Middleware Platform" />
+    <meta property="og:title" content="PulseMesh API - Resilience Management Platform" />
     <meta property="og:description" content="Monitor, manage, and optimize API reliability with intelligent failover, real-time monitoring, and AI-powered resilience for your critical business services." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/logo.svg" />
   </head>
 
   <body>
