refactor: clean up code formatting and improve readability in multiple files

--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PulseMesh API - Resilience Management Platform</title>
-    <meta name="description" content="Monitor, manage, and optimize API reliability with intelligent failover, real-time monitoring, and AI-powered resilience for your critical business services." />
-    <meta name="author" content="PulseMesh API" />
-    <meta name="keywords" content="API monitoring, failover, resilience, middleware, uptime, SaaS" />
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>PulseMesh API - Resilience Management Platform</title>
+		<meta
+			name="description"
+			content="Monitor, manage, and optimize API reliability with intelligent failover, real-time monitoring, and AI-powered resilience for your critical business services."
+		/>
+		<meta name="author" content="PulseMesh API" />
+		<meta
+			name="keywords"
+			content="API monitoring, failover, resilience, middleware, uptime, SaaS"
+		/>
 
-    <meta property="og:title" content="PulseMesh API - Resilience Management Platform" />
-    <meta property="og:description" content="Monitor, manage, and optimize API reliability with intelligent failover, real-time monitoring, and AI-powered resilience for your critical business services." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.svg" />
+		<meta
+			property="og:title"
+			content="PulseMesh API - Resilience Management Platform"
+		/>
+		<meta
+			property="og:description"
+			content="Monitor, manage, and optimize API reliability with intelligent failover, real-time monitoring, and AI-powered resilience for your critical business services."
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="/logo.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/logo.svg" />
-  </head>
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:image" content="/logo.svg" />
+	</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
