--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" type="image/svg+xml" href="/favicon-16x16.svg" sizes="16x16" />
-		<link rel="icon" type="image/svg+xml" href="/icon-192.svg" sizes="192x192" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/favicon-16x16.svg"
+			sizes="16x16"
+		/>
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/icon-192.svg"
+			sizes="192x192"
+		/>
 		<link rel="apple-touch-icon" href="/icon-192.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>PulseMesh API - Resilience Management Platform</title>
